# extract-product

./: Cargo.toml  README.md
src/: extractor.rs  fetcher.rs  gpt_client.rs  main.rs  simularity.rs
