[package]
name = "extract-product"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
shuttle-axum = { version = "0.13.0" }
shuttle-runtime = { version = "0.13.0" }
shuttle-secrets = "0.13.0"
tokio = { version = "1.26.0" }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.10.0"
anyhow = "1.0.70"